@@ -1,3 +1,7 @@
+30 January 2009
+
+* . now bound to "command-prompt 'move-window %%'" by default, from joshe.
+
 29 January 2009
 
 * Window options to set status line fg, bg and attributes for a single
@@ -1066,7 +1070,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.244 2009-01-30 00:39:06 nicm Exp $
+$Id: CHANGES,v 1.245 2009-01-30 21:10:10 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
